--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,6 +12,63 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Fetch tags
+        run: git fetch --tags
+
+      - name: Get previous tag
+        run: |
+          echo "$(git describe --tags --abbrev=0 HEAD^)" > /tmp/previous-tag
+          cat /tmp/previous-tag
+
+      - name: Fetch the previous tag
+        run: git fetch origin $(cat /tmp/previous-tag)
+
+      - name: Get CHANGELOG diff
+        run: |
+          git diff $(cat /tmp/previous-tag)..HEAD -U20 CHANGELOG.md > /tmp/changelog_diff.txt
+          cat /tmp/changelog_diff.txt
+
+      - name: Setup defect
+        uses: ./
+
+      - name: Check the CHANGELOG
+        env:
+          OPENAI_API_KEY: ${{ secrets.DEEPSEEK_API_KEY }}
+          OPENAI_API_BASE: https://api.deepseek.com
+        run: |
+          diff=$(cat /tmp/changelog_diff.txt)
+
+          prompt="
+          You are a coding expert.
+          Review the following CHANGELOG diff, only ensure that:
+          - Nothing is under [Unreleased] section.
+          - The version number of the latest section is correct.
+          - Links at the bottom are updated and correct.
+          - All "Added"/"Changed"/"Fixed"/"Removed" etc sections are h3.
+
+          If you think the diff is correct, output 'OK' with nothing else.
+          Otherwise, output suggestions in markdown format.
+
+          <latest_version>
+          ${{ github.ref_name }}
+          </latest_version>
+
+          <diff>
+          $diff
+          </diff>
+          "
+
+          defect --model=deepseek-chat "$prompt" > /tmp/suggestions
+          cat /tmp/suggestions
+
+      - name: Abort if suggestions are not empty
+        run: |
+          suggestions=$(cat /tmp/suggestions)
+
+          if [ "$suggestions" != "OK" ]; then
+            exit 1
+          fi
+
       - name: Create release
         run: gh release create ${{ github.ref_name }} -t ${{ github.ref_name }} --verify-tag -n "See [CHANGELOG.md](https://github.com/DiscreteTom/setup-defect/blob/main/CHANGELOG.md)."
         env:
