ci: fix defect version

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,8 @@ jobs:
 
       - name: Setup defect
         uses: ./
+        with:
+          version: "0.3.2"
 
       - name: Check the diff
         env:
