--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Check the diff
         env:
           OPENAI_API_KEY: ${{ secrets.DEEPSEEK_API_KEY }}
-          OPENAI_API_BASE: https://api.deepseek.com
+          OPENAI_API_BASE: https://api.deepseek.com/
         run: |
           diff=$(cat /tmp/diff.txt)
 
